Fixed text align in state acceptance wrapper for larger screens

--- a/sites/dev.ndsbs.com/themes/custom/ndsbs/css/ndsbs.theme.css
+++ b/sites/dev.ndsbs.com/themes/custom/ndsbs/css/ndsbs.theme.css
@@ -445,6 +445,9 @@ body.offcanvas-closed #page-header>* {
     margin-bottom: 40px;
     text-align: left;
   }
+  #header-below .block #state-acceptance {
+    text-align: left;
+  }
   #assessments-switcher .switcher-left,
   #assessments-switcher .switcher-right {
     -ms-flex-direction: column;
